add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>My Personal Website</head>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title> The Journey Starts Here</title>
+  </head>
   <body>
-      <h1>Hello, World!</h1>
+      <h1>And So it Begins.. My First Website!</h1>
+      <script src="script.js"></script>
+      <div class = 'paragraph'>
+        <p>This is the introduction to my first website. I am very excited to showcase here what I have learned throughout this prework course and incorporate it in a way where all my new knowledge is culminated into one place. I hope you enjoy my newest creation, and I would like to mention... this is only the beginning! I am thrilled to be a part of this new journey.</p>
+      </div>
   </body>
 </html>
