--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <script src="script.js"></script>
       <div class = 'paragraph'>
         <p>This is the introduction to my first website. I am very excited to showcase here what I have learned throughout this prework course and incorporate it in a way where all my new knowledge is culminated into one place. I hope you enjoy my newest creation, and I would like to mention... this is only the beginning! I am thrilled to be a part of this new journey.</p>
-      </div>
+      <img src="https://c.tenor.com/VmsI5xAblZ0AAAAM/pepe-pepocheer.gif" alt = "Happy Pepe GIF" width =230px height = 180px> 
+    </div>
   </body>
 </html>
